--- a/classes.html
+++ b/classes.html
@@ -26,6 +26,31 @@
 
      </header>
 
+      <article>
+        
+        <div class="container">
+            <br>
+            <h1 class="cor">Eis aqui todas as classes <br> existentes em Dungeons and Dragons</h1>
+        <div class="lista-ordenada">
+            <ol id="list-style" start="1" type="1">
+                <li>Bárbaro</li>
+                <li>Bardo</li>
+                <li>Bruxo</li>
+                <li>Clérigo</li>
+                <li>Druida</li>
+                <li>Feiticeiro</li>
+                <li>Guardião</li>
+                <li>Guerreiro</li>
+                <li>Ladino</li>
+                <li>Mago</li>
+                <li>Monge</li>
+                <li>Paladino</li>
+            </ol>
+        </div>
+        </div>
+     </article>
+
+
       <main class="main-classes">
         <div class="grid">
              <div>
@@ -99,10 +124,22 @@
       </section>
 
 
-     <footer>
-        <div class="div-footer">
-            <h3>Alguns Direitos Reservados</h3>
+      <footer>
+        <div class="footer-grid">
+            <div class="div-footer">
+                <address>
+                    <a href="mailto:dnd@hotmail.com">dnd@hotmail.com</a> <br>
+                    <a href="tel:5553999999999">55 53 9 9999-9999</a>
+                    <p>Rua Ali Perto, 45 -Pelotas</p>
+
+                </address>
+            </div>
+            <div class="botao-footer">
+                <a href="https://www.tecmundo.com.br/voxel/237118-10-melhores-jogos-dungeons-and-dragons.htm">Leia mais</a>
+                <a href="http://pt.wikipedia.org/wiki/Dungeons_%26_Dragons">Wikipedia</a>
+            </div>
         </div>
+       
     </footer>
 </body>
 </html>
