--- a/raças.html
+++ b/raças.html
@@ -59,29 +59,44 @@
         </div>
      </main>
      <article>
-        <table class="tabela">
-            <tr><th colspan="2">Outras caracteristicas</th></tr>
-            <tr>
-              <th>Habilidades</th>
-              <th>Personalidade</th>
-              <th>Armas</th>
-            </tr>
-            <tr>
-              <td>Meio-Elfo</td>
-              <td>Anão</td>
-              <td>Elfo</td>
-            </tr>
-            <tr>
-              <td>Centro comercial Moctezuma</td>
-              <td>Francisco Chang</td>
-              <td>Mexico</td>
-            </tr>
+        <table  class="tabela">
+                 <tr class="row">
+                    <th>Raças</th>
+                    <th>Altura</th>
+                    <th>Idade</th>
+                    <th>Qualidade</th>
+                 </tr>
+                <tr class="row">
+                    <td><strong>Elfo:</strong></td>
+                    <td>1.90 m</td>
+                    <td>500 anos</td>
+                    <td>Sabedoria</td>
+                 </tr>
+                 <tr class="row">
+                    <td><strong>Anão:</strong></td>
+                    <td>1.40 m</td>
+                    <td>120 anos</td>
+                    <td>Lealdade</td>
+                 </tr>
+                 <tr class="row">
+                    <td><strong>Meio-Elfo:</strong></td>
+                    <td>1,80 m</td>
+                    <td>200 anos</td>
+                    <td>Socialização</td>
+                  </tr>
           </table>
      </article>
      <footer>
-        <div class="div-footer">
-            <h3>Alguns Direitos Reservados</h3>
+        <div class="footer-grid">
+            <div class="div-footer">
+                <h3>Alguns Direitos Reservados</h3>
+            </div>
+            <div class="botao-footer">
+                <a href="https://www.tecmundo.com.br/voxel/237118-10-melhores-jogos-dungeons-and-dragons.htm">Leia mais</a>
+                <a href="http://pt.wikipedia.org/wiki/Dungeons_%26_Dragons">Wikipedia</a>
+            </div>
         </div>
+       
     </footer>
 </body>
 </html>
