--- a/index.html
+++ b/index.html
@@ -51,9 +51,16 @@
         
         </main>
         <footer>
-            <div class="div-footer">
-                <h3>Alguns Direitos Reservados</h3>
+            <div class="footer-grid">
+                <div class="div-footer">
+                    <h3>Alguns Direitos Reservados</h3>
+                </div>
+                <div class="botao-footer">
+                    <a href="https://www.tecmundo.com.br/voxel/237118-10-melhores-jogos-dungeons-and-dragons.htm">Leia mais</a>
+                    <a href="http://pt.wikipedia.org/wiki/Dungeons_%26_Dragons">Wikipedia</a>
+                </div>
             </div>
+           
         </footer>
     </body>
 </html>
